# MacUtils

./: .gitignore  CMakeLists.txt  README.md
include/: commands.h  errors.h  sockets.h  utils.h
include/.cache/clangd/index/: commands.h.91BDD2F979A8C958.idx  commands.h.C9090A7C30159F86.idx  errors.h.46B36D810BFC5702.idx  utils.h.2387FE0DBCF29AFA.idx  utils.h.3034F409D9F2094C.idx
src/: change.cpp  errors.cpp  help.cpp  main.cpp  resolve.cpp  restore.cpp  search.cpp  sockets.cpp  utils.cpp
src/.cache/clangd/index/: errors.cpp.1DD1A0E59EC8425B.idx  help.cpp.11CAD23CBA13AE2D.idx  help.cpp.50CC12436F7C9606.idx  main.cpp.C230EAAD7C0CAA2E.idx  main.cpp.D6960E39326694C1.idx  restore.cpp.178875DAE6107640.idx  restore.cpp.90D29B88568C0DC6.idx  search.cpp.294921567A6E8F23.idx  search.cpp.4CEF44CBCACBF18B.idx  utils.cpp.8018B68958AC50E9.idx  utils.cpp.BC7C4B1AE550D231.idx
tests/: tests.cpp
